# quasar-chess-engine-old

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: pytest.yml
quasar/: __init__.py  logger.py  main.py
quasar/chess/: __init__.py  board.py  errors.py  move_validator.py  moves.py  pieces.py  point.py  utils.py
quasar/engine/: __init__.py
quasar/gui/: __init__.py  colors.py  game.py
src/chess/: board.py  errors.py  logger.py  piece.py  pieces.py  point.py  utils.py
tests/: test_moves.py
tests/full_tests/: test_full.py  test_full_move_generation.py
tests/quick_tests/: test_quick.py
tests/standard_tests/: test_standard.py  test_standard_board.py
