[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar"
authors = [
    {name = "Tymon Becella", email = "tymon.becella@gmail.com"},
]
description = "A infinite chess engine"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Infinite Chess", "Chess Engine Development", "Python Chess Engine", "Infinite Board Chess", "Open Source Chess Engine", "Online Chess Gameplay", "Advanced Chess AI", "Chess Software Engineering", "Infinite Chessboard Game", "Collaborative Chess Project"]
license = {text = "MIT License", file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]

dynamic = ["version", "dependencies"]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}